<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:hint="0"
        android:inputType="none"
        android:textAlignment="3"
        android:textSize="50sp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:id="@+id/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textSize="24sp" />

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:id="@+id/per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/per"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/comma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comma"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ch"
                android:textSize="24sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textSize="24sp" />
            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textSize="24sp" />
            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="24sp" />
            <Button
                android:id="@+id/equal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button"
                android:text="@string/equal"
                android:textSize="24sp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>